public class SimulacionRestaurante {
    public static void main(String[] args) {
        Restaurante restaurante = new Restaurante();
        restaurante.iniciarSimulacion();
    }
}